Greet-Tweet-Know 0.0.eCa666: *the arg release* - great stuff but a pain in my neck.
I've added, improved, refactored, and fix a ton of various things in this release.  In this official release.  I have refactored my friends manager's profile viewer, the timeline view, and the 'extended tweets' box/area.  There are also countless bug fixes in this version.  Literally I've lost count.

I'm using libsexy to display the user's @username, URL, & Bio/Description to Greet-Tweet-Know's profile viewer and the extended tweet viewer so now links & etc can be clicked on to open the page in the GNOME/GTK's default viewer.

I have removed the 'preference' for displaying usernames.  Greet-Tweet-Know now displays them both.  It does this in the timeline viewer, extended tweets, and in my profile viewer.

I have also fixed a bug with my network timer that was causing re-logins to fail.  Lastly I fixed an odd issue that was causeing Greet-Tweet-Know to segfault when exiting if my friends-manager or friends viewer was selected some time during the session.

Lastly I've implemented basic signal processing & handling.  So now greet-tweet-know will only run once & than signal action based an command line arguments.  Right now greet-Tweet-Know doesn't support any command line arguments.  But I'm planning on having it support getting a tweet uri.  For example 'tweet://twitter.com/' would start an new tweet, 'tweet://twitter.com/@username' will start a new reply, and 'tweet://twitter.com/username' would start a new direct message.

Lastly I've fixed the bug that was causing Greet-Tweet-Know to segfault when the friends manager was loaded for the second time.  Lastly I have improved how Greet-Tweet-Know monitors Twitter's 'X-RateLimit-Remaining' header to try & avoid ever reaching their limit.

Lastly I have stopped Greet-Tweet-Know's random segfault which were being caused by having a list of the user's friends & followers both.  If both lists are initalized freeing these lists wes causing 

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([greet-tweet-know], [0.0.0eC], [http://uberChicGeekChick.Com/?projects=Greet-Tweet-Know], [greet-tweet-know])
+AC_INIT([greet-tweet-know], [0.0.eCa666], [http://uberChicGeekChick.Com/?projects=Greet-Tweet-Know], [greet-tweet-know])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -82,7 +82,7 @@ PKG_CHECK_MODULES(GREET_TWEET_KNOW,
 	libsexy
 	libsoup-2.4
 	libnotify
-	libglade-2.0 >= $LIBGLADE_REQUIRED
+	gnome-vfs-2.0
 	gtk+-2.0 >= $GTK_REQUIRED
 	glib-2.0 >= $GLIB_REQUIRED
 	gio-2.0 >= $LIBGIO_REQUIRED
