--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -249,7 +249,7 @@ gtkbuilder_DATA = 			\
 	preferences.ui			\
 	main-window.ui			\
 	send-message-dialog.ui		\
-	user-profile.ui			\
+	profile-viewer.ui		\
 	popup-dialog.ui			\
 	friends-manager.ui		\
 	followers-dialog.ui		\
