Greet-Tweet-Know 0.0.eCa9: Tweet & Friends controls added to Tweet viewer & many architecure improvements.
I'm continuing to tweak Greet-Tweet-Know's UI to provide easy access to the methods & viewers I added as part of my friends manager.  I've also added multiple buttons & menu entries to allow you to more easily catch up with your friends Tweets & more.

I added three buttons under the user's avatar.  They let you view the user's profile with their bio, tweets, friends, followers, and etc.  Another let's you view the user & friends recent tweets so you can catch up with what's going on with your friends & followers.  Lastly is a button for starting a new Direct Message.  Right now it just starts the send message dialog.  I need to extend it so that it can be used to send a DM w/o having to load all of one's friends, ie who you're following.

Than to the right side of the tweet viewer I've added buttons to reply, retweet, and save the Tweet as a favorite.  I have also fixed a GTK error that was being triggered when Greet-Tweet-Know started up & selected the default timeline radio button.

I've done a ton of work on Greet-Tweet-Know's backend.  Most of this is to make Greet-Tweet-Know more efficiant & more readable & even pretty.  I've removed a lot of redundant code as well, though I still have a lot of clean-up I want to do.

I have a lot I want to do with Greet-Tweet-Know.  I really want to make it the best possible communication application.  I want to add support for libpurple, imap3, and the many other online communication platforms.  I'll befocusing on adding support for multiple accounts & services with version 2.0.0.a0.  For now I want to impliment all of Twitter's functions & make them as easy to use as possible.

I've also extended my network timer to further decrease Greet-Tweet-Know's chances of ever hitting Twitter's rate limit.

Committed on: 2009-04-13 @ 06:25:21 AM

--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,7 @@ dnl Library Dependencies, uses pkg-config to detect correct version, etc
 dnl
 dnl -----------------------------------------------------------
 
+LIBSOUP_REQUIRED=2.26.0
 LIBGLADE_REQUIRED=0.23
 LIBXML_REQUIRED=2.6.16
 GLIB_REQUIRED=2.15.0
@@ -80,7 +81,7 @@ dnl -----------------------------------------------------------
 PKG_CHECK_MODULES(GREET_TWEET_KNOW,
 [
 	libsexy
-	libsoup-2.4
+	libsoup-2.4 >= $LIBSOUP_REQUIRED
 	libnotify
 	gnome-vfs-2.0
 	gtk+-2.0 >= $GTK_REQUIRED
