Greet-Tweet-Know 0.0.eCa9: Re-factoring network & account to add support for multiple accounts.  Multiple bug fixes included & lower libsoup requirement.
I am working on adding support for laconica instantances to Greet-Tweet-Know.  In the process of doing that I've majorly re-wrote my networking stack.  Literally every thing has been re-wrote.  I've added several methods, a new structure & enum types for handling all api posts, literally POSTS, and I've added a macro for libsoup's new 'message_get_headers_one' if libsoup doesn't define it.  That way I can still usse the most upto date libsoup methods while 'supporting' users who don't have access to to the latest libsoup.

I have also fixed several 'inherited' bugs. Several dealing with start-up & reconnection.  There where several other places where I've simply re-wrote methods so they make sense.  There are a lot of code improvements I need to do over all.

One step closer to version 1.0.0.a9.  I hope adding support for laconica/identica will be enough to start getting some feedback & generating interest.

Committed on: 2009-04-15 @ 07:36:24 AM

--- a/data/greet-tweet-know.schemas.in
+++ b/data/greet-tweet-know.schemas.in
@@ -2,6 +2,30 @@
   <schemalist>
     
     <schema>
+       <key>/schemas/apps/greet-tweet-know/auth/services</key>
+       <applyto>/apps/greet-tweet-know/auth/services</applyto>
+       <owner>greet-tweet-know</owner>
+       <type>list</type>
+       <default>[https://twitter.com/userName:password,https://identi.ca/username:password]</default>
+       <locale name="C">
+          <short>Services URI (not-yet implemented)</short>
+          <long>Secure HTTP URI for the accounts services, username, and password(if gnome_keyring's not enabled).</long>
+       </locale>
+    </schema>
+
+    <schema>
+       <key>/schemas/apps/greet-tweet-know/auth/service</key>
+       <applyto>/apps/greet-tweet-know/auth/service</applyto>
+       <owner>greet-tweet-know</owner>
+       <type>string</type>
+       <default>https://twitter.com</default>
+       <locale name="C">
+          <short>Services URI</short>
+          <long>Secure HTTP URI for the micro-blogging service.</long>
+       </locale>
+    </schema>
+
+    <schema>
        <key>/schemas/apps/greet-tweet-know/auth/user_id</key>
        <applyto>/apps/greet-tweet-know/auth/user_id</applyto>
        <owner>greet-tweet-know</owner>
