--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,8 @@ dnl Library Dependencies, uses pkg-config to detect correct version, etc
 dnl
 dnl -----------------------------------------------------------
 
-LIBSOUP_REQUIRED=2.26.0
+#LIBSOUP_REQUIRED=2.26.0
+LIBSOUP_REQUIRED=2.24.0
 LIBGLADE_REQUIRED=0.23
 LIBXML_REQUIRED=2.6.16
 GLIB_REQUIRED=2.15.0
