get2gnow 0.0.0.eCa9: laconica support 2/3rds done & major UI improvements
I'm contining to add suppor for identi.ca, & etc laconica installs. I am also preparing to add OAuth support for Twitter, I'm not happy about having to do it now.  But I am looking for to learning the OAuth spec.  Though if I hear or read it called a 'protocol' again I'm gonna laugh my butt of.  Web2.0 people are just so cute  To implement major refactoring, code clean-up, menu handling, and network requests.

Committed on: 2009-04-17 @ 11:52:45 AM

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -200,13 +200,13 @@
 	<applyto>/apps/get2gnow/ui/spell</applyto>
 	<owner>get2gnow</owner>
 	<type>bool</type>
-	<default>false</default>
+	<default>true</default>
 	<locale name="C">
 	   <short>Enable spell checking</short>
 	   <long>Enable spell checking.</long>
 	</locale>
      </schema>
-     
+
      <schema>
       <key>/schemas/apps/get2gnow/hints/close_main_window</key>
       <applyto>/apps/get2gnow/hints/close_main_window</applyto>
