get2gnow 0.0.eC.aDD - OAuth support implemented - further support for multiple account, 70% complete, & many bug fixes.
I have made major progress on adding support for identi.ca, ie laconica, and and micro-blogging service that uses a 'Twitter-Compatible-~api~'.  I would have finished it with this commit but I've had to focus on implement OAuth.  Because let's face it if I don't do it now I'd never do it & get2gnow would've ended up locked out of Twitter.  At least that was my fear, and so I spent 1/2 of my day trying to 'bug-fix' my bug-free OAuth code, until finally finding hidden away on Twitter's dev talk google group a lil notice about OAuth being disabled.  Could they have at least put that in OAuth response codes?  Well yes & no, they could & should have, but its not supported by the spec which is the most worthless & overly complicated spec for any thing imaginable.  For example it requires parameter sorting.  An 'open' spec designed to close of access from data.  Its an oximoron & just further's my belief in how lil the web2.0 ~gurus~ understand the idea of openness.

Now more ranting I don't us Twitter because of its well thought out archicture I use it to connect with wonderful people who fill my life, at least as much as any online connection can, which for me is all I have & much more than I've had many times before.

There's a lot of of bug fixes & partial new features in this commit.  They're not complete but of what is, its a sneak peak at things to come.  Assuming web services don't try to lock down their data any more.  When even 'open-micro-blogging' isn't 'open' its a sad, sad day.

Along with the sneak peak at things to come there are a lot of bug-fixes & over all improvements that all make this a more than worth while commit & def worth 'checking-out'.  My bug-fixes alone are worth it.

Again I beg for feedback, catch me on Twitter, send my a message on GitHub, comment on my site, or again drop send me an email...yeah I switched to evolution, 

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@ C_STD_MODE=gnu99
 AM_CFLAGS=						\
 	-I$(top_srcdir)                          	\
 	-I${top_builddir}				\
-	-DBUILDDIR=\""${top_builddir}"\"		\
+	-DBUILDDIR=\""${abs_top_builddir}"\"		\
 	-DPREFIX="\"$(prefix)"\"			\
 	-DSYSCONFDIR=\""$(sysconfdir)"\"		\
 	-DDATADIR=\""$(datadir)"\"              	\
@@ -35,6 +35,7 @@ get2gnow_SOURCES = 				\
 	geometry.c		geometry.h		\
 	hint.c			hint.h			\
 	label.c			label.h			\
+	oauth.c			oauth.h			\
 	network.c		network.h		\
 	timer.c			timer.h			\
 	parser.c		parser.h		\
