--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], [0.0.0.eCa9], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], [0.0.eC.aDD], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -79,6 +79,7 @@ dnl -----------------------------------------------------------
 PKG_CHECK_MODULES(get2gnow,
 [
 	libsexy
+	openssl
 	libsoup-2.4 >= $LIBSOUP_REQUIRED
 	libnotify
 	gnome-vfs-2.0
