--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -245,14 +245,14 @@ schemas_in_files = get2gnow.schemas.in
 schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
 gtkbuilderdir = $(datadir)/get2gnow
 gtkbuilder_DATA = 			\
-	preferences.ui			\
-	main-window.ui			\
-	send-message-dialog.ui		\
-	profile-viewer.ui		\
-	popup-dialog.ui			\
-	friends-manager.ui		\
+	accounts-dialog.ui		\
 	following-viewer.ui		\
-	accounts-dialog.ui
+	friends-manager.ui		\
+	main-window.ui			\
+	oauth-authorize.ui		\
+	popup-dialog.ui			\
+	preferences.ui			\
+	profile-viewer.ui
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = get2gnow.svg
