--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -6,6 +6,7 @@
        <applyto>/apps/get2gnow/auth/services</applyto>
        <owner>get2gnow</owner>
        <type>list</type>
+       <listtype>string</listtype>
        <default>[https://twitter.com/userName:password,https://identi.ca/username:password]</default>
        <locale name="C">
           <short>Services URI (not-yet implemented)</short>
@@ -14,20 +15,8 @@
     </schema>
 
     <schema>
-       <key>/schemas/apps/get2gnow/auth/service</key>
-       <applyto>/apps/get2gnow/auth/service</applyto>
-       <owner>get2gnow</owner>
-       <type>string</type>
-       <default>https://twitter.com</default>
-       <locale name="C">
-          <short>Services URI</short>
-          <long>Secure HTTP URI for the micro-blogging service.</long>
-       </locale>
-    </schema>
-
-    <schema>
-       <key>/schemas/apps/get2gnow/auth/user_id</key>
-       <applyto>/apps/get2gnow/auth/user_id</applyto>
+       <key>/schemas/apps/get2gnow/auth/twitter.com/username</key>
+       <applyto>/apps/get2gnow/auth/twitter.com/username</applyto>
        <owner>get2gnow</owner>
        <type>string</type>
        <default></default>
@@ -38,8 +27,8 @@
     </schema>
 
     <schema>
-       <key>/schemas/apps/get2gnow/auth/password</key>
-       <applyto>/apps/get2gnow/auth/password</applyto>
+       <key>/schemas/apps/get2gnow/auth/twitter.com/password</key>
+       <applyto>/apps/get2gnow/auth/twitter.com/password</applyto>
        <owner>get2gnow</owner>
        <type>string</type>
        <default></default>
@@ -50,8 +39,8 @@
     </schema>
     
     <schema>
-    	<key>/schemas/apps/get2gnow/auth/auto_login</key>
-    	<applyto>/apps/get2gnow/auth/auto_login</applyto>
+    	<key>/schemas/apps/get2gnow/auth/twitter.com/auto_connect</key>
+    	<applyto>/apps/get2gnow/auth/twitter.com/auto_connect</applyto>
     	<owner>get2gnow</owner>
     	<type>bool</type>
     	<default>true</default>
@@ -62,23 +51,11 @@
     </schema>
 
     <schema>
-    	<key>/schemas/apps/get2gnow/tweets/names</key>
-    	<applyto>/apps/get2gnow/tweets/names</applyto>
-    	<owner>get2gnow</owner>
-    	<type>bool</type>
-    	<default>true</default>
-    	<locale name="C">
-    	   <short>Show user names instead real names</short>
-    	   <long>Show user names instead real names.</long>
-    	</locale>
-    </schema>
-
-    <schema>
     	<key>/schemas/apps/get2gnow/tweets/home_timeline</key>
     	<applyto>/apps/get2gnow/tweets/home_timeline</applyto>
     	<owner>get2gnow</owner>
     	<type>string</type>
-    	<default>http://twitter.com/statuses/friends_timeline.xml</default>
+    	<default>/statuses/friends_timeline.xml</default>
     	<locale name="C">
     	   <short>User's home timeline</short>
     	   <long>User's home timeline.</long>
@@ -102,7 +79,7 @@
 	<applyto>/apps/get2gnow/ui/main_window_height</applyto>
 	<owner>get2gnow</owner>
 	<type>int</type>
-	<default>0</default>
+	<default>700</default>
 	<locale name="C">
 	   <short>Main window height</short>
 	   <long>Main window height.</long>
@@ -114,7 +91,7 @@
 	<applyto>/apps/get2gnow/ui/main_window_width</applyto>
 	<owner>get2gnow</owner>
 	<type>int</type>
-	<default>0</default>
+	<default>730</default>
 	<locale name="C">
 	   <short>Main window width</short>
 	   <long>Main window width.</long>
@@ -126,7 +103,7 @@
 	<applyto>/apps/get2gnow/ui/main_window_pos_x</applyto>
 	<owner>get2gnow</owner>
 	<type>int</type>
-	<default>0</default>
+	<default>680</default>
 	<locale name="C">
 	   <short>Main window X position</short>
 	   <long>Main window X position.</long>
@@ -138,7 +115,7 @@
 	<applyto>/apps/get2gnow/ui/main_window_pos_y</applyto>
 	<owner>get2gnow</owner>
 	<type>int</type>
-	<default>0</default>
+	<default>25</default>
 	<locale name="C">
 	   <short>Main window Y position</short>
 	   <long>Main window Y position.</long>
@@ -178,32 +155,6 @@
 	<locale name="C">
 	   <short>Sound notification of new Twitter messages</short>
 	   <long>Sound notification of new Twitter messages.</long>
-	</locale>
-     </schema>
-
-     <schema>
-      <key>/schemas/apps/get2gnow/ui/spell_checker_languages</key>
-      <applyto>/apps/get2gnow/ui/spell_checker_languages</applyto>
-      <owner>get2gnow</owner>
-      <type>string</type>
-      <default>en</default>
-      <locale name="C">
-	<short>Spell checking languages</short>
-	<long>
-	  Comma separated list of spell checker languages to use (e.g. en, fr, nl).
-	</long>
-      </locale>
-     </schema>
-
-     <schema>
-	<key>/schemas/apps/get2gnow/ui/spell</key>
-	<applyto>/apps/get2gnow/ui/spell</applyto>
-	<owner>get2gnow</owner>
-	<type>bool</type>
-	<default>true</default>
-	<locale name="C">
-	   <short>Enable spell checking</short>
-	   <long>Enable spell checking.</long>
 	</locale>
      </schema>
 
