get2gnow 0.0.eC.DB3: A get2gnow 1st: Twitter's new 'mentions' resource implemented.  Also includes many bug-fixes, tweaks, & hacks toward version 1.0.0 release.
Twitter has implemented several changes to their REST resources.  One major one is they've dropped their '/status/replies.?' in favor of a new resource: '/status/mentions.?'.  I have implimented this new resource and updated my menu, UI, and etc.

I've also re-implemented my pre-GTK+2.0 - 2.16 hack so once again get2gnow will work just fine on any thing past GTK+2.0 - 2.12.

I have fixed some more issues with FriendRequest actions.  Again these all occur when Twitter respondes incorrectly.  This is because the original code did not validate responses from Twitter it only checks http_status code.  I still need to add further validation but I have fixed several random segfaults.

I have also improved my new tweeting interface.  I've added a keyboard hotkey for 'Alt+S' to send tweets & dms.  I added this for any one who was used to submitting tweets through the old UI.  The fastest way way to press 'Alt+S', I found myself pressing this quit often out of per habit, when trying to send my tweets.  This is only a temporary shortcut but one I hope will continue to make get2gnow as usable as possible.

I have also removed the enchant checking routines from configure & etc.  As spell checking is now handled by libsexy, which requires enchant right now, but may change its spell cheching engine later.  So either way get2gnow no longer uses or needs to know anything about enchant so it no longer looks.

Next is adding support for having an identi.ca account as well.  And than extending that to support multiple twitter & laconica accounts & services.

Committed on: 2009-04-25 @ 11:03:16 PM

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,8 +8,7 @@ AM_CFLAGS=						\
 	-DDATADIR=\""$(datadir)"\"              	\
 	-DLOCALEDIR=\""$(localedir)"\"			\
 	-DLIBDIR=\""$(libdir)"\"			\
-	$(get2gnow_CFLAGS)			\
-	$(ENCHANT_CFLAGS)				\
+	$(get2gnow_CFLAGS)				\
 	$(WARN_CFLAGS)					\
 	-std=$(C_STD_MODE)
 
@@ -19,7 +18,7 @@ if HAVE_GNOME_KEYRING
 keyring_sources = keyring.c keyring.h
 endif
 
-get2gnow_SOURCES = 				\
+get2gnow_SOURCES = 					\
 	$(keyring_sources)				\
 	main.c			main.h			\
 	gconf.c			gconf.h			\
@@ -50,5 +49,4 @@ get2gnow_SOURCES = 				\
 
 
 get2gnow_LDADD=			\
-	$(get2gnow_LIBS)	\
-	$(ENCHANT_LIBS)
+	$(get2gnow_LIBS)
