--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], [0.0.eC.b4], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], [0.0.eC.DB3], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -42,7 +42,6 @@ GTK_REQUIRED=2.12.12
 GCONF_REQUIRED=1.2.0
 LIBGIO_REQUIRED=2.15.5
 LIBCANBERRA_REQUIRED=0.4
-ENCHANT_REQUIRED=1.2.0
 ISO_CODES_REQUIRED=0.35
 
 dnl -----------------------------------------------------------
@@ -98,44 +97,6 @@ AC_SUBST(get2gnow_CFLAGS)
 AC_SUBST(get2gnow_LIBS)
 
 dnl -----------------------------------------------------------
-dnl Enchant
-dnl -----------------------------------------------------------
-AC_ARG_ENABLE(spell,
-              AS_HELP_STRING([--enable-spell=@<:@no/yes/auto@:>@],
-                             [compile with spell support]), ,
-                             enable_spell=auto)
-
-if test "x$enable_spell" != "xno"; then
-   PKG_CHECK_MODULES(ENCHANT,
-   [
-      enchant >= $ENCHANT_REQUIRED,
-      iso-codes >= $ISO_CODES_REQUIRED
-   ], have_enchant="yes", have_enchant="no")
-
-   if test "x$have_enchant" = "xyes"; then
-      AC_MSG_CHECKING([whether iso-codes has iso-639 and iso-3166 domains])
-      if $PKG_CONFIG --variable=domains iso-codes | grep 639 > /dev/null && \
-         $PKG_CONFIG --variable=domains iso-codes | grep 3166 > /dev/null ; then
-            AC_DEFINE_UNQUOTED(ISO_CODES_PREFIX, ["`$PKG_CONFIG --variable=prefix iso-codes`"], [ISO codes prefix])
-            AC_DEFINE(HAVE_ENCHANT, [], [Define if you have libenchant])
-            result=yes
-      else
-            result=no
-            have_enchant="no"
-      fi
-      AC_MSG_RESULT([$result])
-   fi
-else
-   have_enchant=no
-fi
-
-if test "x$enable_spell" = "xyes" -a "x$have_enchant" != "xyes"; then
-   AC_MSG_ERROR([Couldn't find spell dependencies.])
-fi
-
-AM_CONDITIONAL(HAVE_ENCHANT, test "x$have_enchant" = "xyes")
-
-dnl -----------------------------------------------------------
 dnl Language Support
 dnl -----------------------------------------------------------
 GETTEXT_PACKAGE=get2gnow
@@ -154,7 +115,10 @@ po/Makefile
 ])
 
 echo
-echo "Prefix:        $prefix"
-echo "Spell:         $have_enchant"
-echo "GNOME Keyring: $have_gnome_keyring"
+echo "Prefix:       	$prefix"
+echo "GNOME Keyring:	$have_gnome_keyring"
+echo "Debug Mode:	$enable_debug"
+if test x$enable_debug = xyes ; then
+	echo "Debug BUILDDIR:	$abs_top_builddir"
+fi
 echo
