get2gnow 0.0.eC.db4: a lil polish goes a long way.
I'm now getting to do some of my fave work I ever get to do on any project.  In all honesty its something I'm always doing, but during my projects 'feature freeze & bug fixing phase is when I let myself go and polish how things work and especially how thing look & how the two effect each other.  I'm even free to uber polish my code.  Its when I'm my most expressive & feel my creative needs most fulfilled.  Its when my attention to detail really gets to come out and play.  Right now, with identi.ca support being my last major feature, every thing else is frozen & now I'm tweeking how thing work & especially how actions are effecting get2gnow's UI.

I've further added more support for multiple services and accounts.  Like I said: I'm polishing this feature.  Its requiring multiple soup sessions & each support multple connections, libsoup is also highly threaded.  So when adding multiple account & services support I'm refactoring my entire networking stack into a GObject interface.  I'm planning on inheriting from SoupConnect, or SoupAuth, I'm unsure.  Because despite my principled stand against any thing that restricts or obfuscates access to data, like OAuth, I feel very ambivilant about implementing it.  My gut, heart, mind, & principals tell me to stand against it & I want to.  But I want get2gnow to be the best possible communication platform & that of course mean being the best Twitter client as well & if they end up forcing implementation of OAuth than I at least want to have a functional client.

My principles are more important though.  So after I add identi.ca support & release get2gnow version 1.0.0.a.0 I'm going to start raising awareness about these issues.  Which will mean blogging, podcasting, & pushing my 'aganda' of open data access.  I actually feel great about this, despite the opposition I've already faced in my stance on open access.  I'm ready for this fight.  LOL Well I've found my life's issue &

--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -249,7 +249,7 @@ gtkbuilder_DATA = 			\
 	following-viewer.ui		\
 	friends-manager.ui		\
 	main-window.ui			\
-	oauth-authorize.ui		\
+	tweet-view.ui			\
 	popup-dialog.ui			\
 	preferences.ui			\
 	profile-viewer.ui
